--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -3,14 +3,15 @@
 
 nav.navbar.navbar-default.unrounded(role='navigation')
     .navbar-header
-        a.navbar-brand(href='/')
+        a.navbar-brand.vertical-center(href='/')
             img(src='images/entree-header-logo.svg')
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
             li
-                a.button.icon.chat(href='#')
-                    span Become a Partner
+                a.vertical-center(href='/')
+                    img.nav-buttons(src='images/partner_button.png', alt='Become a Partner', style='height:65px;border:0')
             li
-                a(href='#') Link
+                a.vertical-center(href='https://m.me/entreebot')
+                    img.nav-buttons(src='images/messenger_button.png', alt='Messenger Entree', style='height:65px;border:0')
 
 
