--- a/views/layouts/index.jade
+++ b/views/layouts/index.jade
@@ -4,6 +4,8 @@ html
     include ../includes/bootstrap.jade
     link(href='/css/navbar.css' rel='stylesheet' type='text/css')
     link(href='/css/footer.css' rel='stylesheet' type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
+    link(href='/css/font.css' rel='stylesheet' type='text/css')
     block title
   body
     block content
