--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -2,3 +2,29 @@
    Created by kfu on 6/30/16.
 
 footer.footer
+    div.col-md-5.parent-height
+        ul.list-inline.parent-height(style="text-align: center;")
+            li
+                a.white.vertical-center.right-border(href="/") PRIVACY POLICY
+                | |
+            li
+                a.white.vertical-center.right-border.left-border(href="/") TERMS OF SERVICE
+                | |
+            li
+                a.white.vertical-center.left-border(href="/") FAQ
+    div.col-md-2.parent-height
+        img.absolute-center(src='images/entree-footer-logo.svg', alt='Become a Partner', style='height:65px;border:0')
+    div.col-md-5
+        ul.list-inline.parent-height.social-align(style="text-align: center;")
+            li
+                a(href="/")
+                    img.social-pad-right.social-height(src='images/social-facebook.svg')
+            li
+                a(href="/")
+                    img.social-pad-right.social-height(src='images/social-instagram.svg')
+            li
+                a(href="/")
+                    img.social-pad-right.social-height(src='images/social-messenger.svg')
+            li
+                a(href="/")
+                    img.social-height(src='images/social-twitter.svg')
