fixed footer scrolling issue

--- a/views/layouts/index.jade
+++ b/views/layouts/index.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     include ../includes/bootstrap.jade
+    meta(content='width=device-width, initial-scale=1', name='viewport')
     link(href='/css/navbar.css' rel='stylesheet' type='text/css')
     link(href='/css/footer.css' rel='stylesheet' type='text/css')
     link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
