--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,10 +1,10 @@
 .footer {
-    position: absolute;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 100px;
     background-color: #015292;
+    position: fixed;
 }
 
 .left
