--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -13,18 +13,19 @@ footer.footer
             li
                 a.white.vertical-center.left-border(href="/") FAQ
     div.col-md-2.parent-height
-        img.absolute-center(src='images/entree-footer-logo.svg', alt='Become a Partner', style='height:65px;border:0')
+        img.absolute-center(src='images/entree-footer-logo.svg', alt='Entree', style='height:65px;border:0')
     div.col-md-5
         ul.list-inline.parent-height.social-align(style="text-align: center;")
             li
-                a(href="/")
+                a(href="https://www.facebook.com/entreebot/")
                     img.social-pad-right.social-height(src='images/social-facebook.svg')
+            //
+                li
+                    a(href="/")
+                        img.social-pad-right.social-height(src='images/social-instagram.svg')
             li
-                a(href="/")
-                    img.social-pad-right.social-height(src='images/social-instagram.svg')
-            li
-                a(href="/")
+                a(href="https://m.me/entreebot")
                     img.social-pad-right.social-height(src='images/social-messenger.svg')
             li
-                a(href="/")
+                a(href="https://twitter.com/EntreeBot")
                     img.social-height(src='images/social-twitter.svg')
