added image for the phone, logo, and added baseline messenger button code

--- a/views/landing.jade
+++ b/views/landing.jade
@@ -5,7 +5,7 @@ doctype html
   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 html
   head
-    title Fractal by HTML5 UP
+    title Entree
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     //if lte IE 8
@@ -15,96 +15,99 @@ html
       link(rel='stylesheet', href='assets/css/ie8.css')
     //if lte IE 9
       link(rel='stylesheet', href='assets/css/ie9.css')
+    link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
   body#top
     // Header
     header#header
       .content
         h1
-          a(href='#') Fractal
+          img(src='images/entree-header-logo.svg')
         p
-          | Just a simple, single page responsive
+          | Stop Waiting. Start Eating.
           br
-          | 					template brought to you by
-          a(href='http://html5up.net') HTML5 UP
+          br
+          | Order ahead from the best food
+          br
+          | trucks around you through
+          br
+          | Facebook Messenger.
+        ul.actions
+          li
+            .fb-messengermessageus(messenger_app_id='APP_ID', page_id='PAGE_ID', color='blue', size='standard')
+      .image.phone
+        .inner
+          img(src='images/phone_screen.png', alt='')
+    // One
+      section#one.wrapper.style2.special
+        header.major
+          h2
+            | Sed ipsum magna lorem tempus amet
+            br
+            | 					vehicula et gravida elementum
+        ul.icons.major
+          li
+            span.icon.fa-camera-retro
+              span.label Shoot
+          li
+            span.icon.fa-refresh
+              span.label Process
+          li
+            span.icon.fa-cloud
+              span.label Upload
+    // Two
+      section#two.wrapper
+        .inner.alt
+          section.spotlight
+            .image
+              img(src='images/pic01.jpg', alt='')
+            .content
+              h3 Magna sed ultrices
+              p
+                | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
+          section.spotlight
+            .image
+              img(src='images/pic02.jpg', alt='')
+            .content
+              h3 Ultrices nullam aliquam
+              p
+                | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
+          section.spotlight
+            .image
+              img(src='images/pic03.jpg', alt='')
+            .content
+              h3 Aliquam sed magna
+              p
+                | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
+          section.special
+            ul.icons.labeled
+              li
+                span.icon.fa-camera-retro
+                  span.label Ipsum lorem accumsan
+              li
+                span.icon.fa-refresh
+                  span.label Sed vehicula elementum
+              li
+                span.icon.fa-cloud
+                  span.label Elit fusce consequat
+              li
+                span.icon.fa-code
+                  span.label Lorem nullam tempus
+              li
+                span.icon.fa-desktop
+                  span.label Adipiscing amet sapien
+    // Three
+      section#three.wrapper.style2.special
+        header.major
+          h2 Magna leo sapien gravida
+          p
+            | Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula
+            br
+            | 					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.
         ul.actions
           li
             a.button.special.icon.fa-download(href='#') Download
           li
-            a.button.icon.fa-chevron-down.scrolly(href='#one') Learn More
-      .image.phone
-        .inner
-          img(src='images/screen.jpg', alt='')
-    // One
-    section#one.wrapper.style2.special
-      header.major
-        h2
-          | Sed ipsum magna lorem tempus amet
-          br
-          | 					vehicula et gravida elementum
-      ul.icons.major
-        li
-          span.icon.fa-camera-retro
-            span.label Shoot
-        li
-          span.icon.fa-refresh
-            span.label Process
-        li
-          span.icon.fa-cloud
-            span.label Upload
-    // Two
-    section#two.wrapper
-      .inner.alt
-        section.spotlight
-          .image
-            img(src='images/pic01.jpg', alt='')
-          .content
-            h3 Magna sed ultrices
-            p
-              | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
-        section.spotlight
-          .image
-            img(src='images/pic02.jpg', alt='')
-          .content
-            h3 Ultrices nullam aliquam
-            p
-              | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
-        section.spotlight
-          .image
-            img(src='images/pic03.jpg', alt='')
-          .content
-            h3 Aliquam sed magna
-            p
-              | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
-        section.special
-          ul.icons.labeled
-            li
-              span.icon.fa-camera-retro
-                span.label Ipsum lorem accumsan
-            li
-              span.icon.fa-refresh
-                span.label Sed vehicula elementum
-            li
-              span.icon.fa-cloud
-                span.label Elit fusce consequat
-            li
-              span.icon.fa-code
-                span.label Lorem nullam tempus
-            li
-              span.icon.fa-desktop
-                span.label Adipiscing amet sapien
-    // Three
-    section#three.wrapper.style2.special
-      header.major
-        h2 Magna leo sapien gravida
-        p
-          | Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula
-          br
-          | 					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.
-      ul.actions
-        li
-          a.button.special.icon.fa-download(href='#') Download
-        li
-          a.button(href='#') Learn More
+            a.button(href='#') Learn More
     // Four
     //
       <section id="four" class="wrapper">
@@ -413,21 +416,7 @@ html
       </section>
       </div>
       </section>
-    // Footer
-    footer#footer
-      ul.icons
-        li
-          a.icon.fa-facebook(href='#')
-            span.label Facebook
-        li
-          a.icon.fa-twitter(href='#')
-            span.label Twitter
-        li
-          a.icon.fa-instagram(href='#')
-            span.label Instagram
-      p.copyright
-        | © Untitled. Credits:
-        a(href='http://html5up.net') HTML5 UP
+    include includes/footer.jade
     // Scripts
     script(src='assets/js/jquery.min.js')
     script(src='assets/js/jquery.scrolly.min.js')
