--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3627,7 +3627,7 @@
 /* Header */
 
 	#header {
-		background-color: #4696e5;
+		background-color: #005090;
 		color: #d0e4f8;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
@@ -3849,6 +3849,7 @@
 		#header p {
 			font-size: 1.5em;
 			line-height: 1.35em;
+			font-family: 'Roboto', sans-serif !important;
 		}
 
 			#header p br {
