--- a/views/landing.jade
+++ b/views/landing.jade
@@ -34,10 +34,9 @@ html
         ul.actions
           li
             script(type='text/javascript').
-              var branch = #{branch};
               var config = !{config};
-              var appId = #{isStaging} ? config.Facebook[branch].appId : config.Facebook.appId;
-              var pageId = #{isStaging} ? config.Facebook[branch].pageId : config.Facebook.pageId;
+              var appId = #{isStaging} ? config.Facebook[#{branch}].appId : config.Facebook.appId;
+              var pageId = #{isStaging} ? config.Facebook[#{branch}].pageId : config.Facebook.pageId;
             #send-to-messenger-button.fb-messengermessageus(color='white', size='xlarge')
             script(type='text/javascript' src='assets/js/send-to-messenger.js')
       .image.phone
