switched to react.js.... messenger button still not working

--- a/views/landing.jade
+++ b/views/landing.jade
@@ -21,7 +21,7 @@ html
     header#header
       .content
         h1
-          img(src='images/entree-header-logo.svg')
+          img(src='img/entree-header-logo.svg')
         p
           | Stop Waiting. Start Eating.
           br
@@ -38,10 +38,9 @@ html
               var appId = #{isStaging} ? config.Facebook['#{branch}'].appId : config.Facebook.appId;
               var pageId = #{isStaging} ? config.Facebook['#{branch}'].pageId : config.Facebook.pageId;
             #send-to-messenger-button.fb-messengermessageus(color='white', size='xlarge')
-            script(type='text/javascript' src='assets/js/send-to-messenger.js')
       .image.phone
         .inner
-          img(src='images/phone_screen.png', alt='')
+          img(src='img/phone_screen.png', alt='')
     // One
       section#one.wrapper.style2.special
         header.major
@@ -64,21 +63,21 @@ html
         .inner.alt
           section.spotlight
             .image
-              img(src='images/pic01.jpg', alt='')
+              img(src='img/pic01.jpg', alt='')
             .content
               h3 Magna sed ultrices
               p
                 | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
           section.spotlight
             .image
-              img(src='images/pic02.jpg', alt='')
+              img(src='img/pic02.jpg', alt='')
             .content
               h3 Ultrices nullam aliquam
               p
                 | Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.
           section.spotlight
             .image
-              img(src='images/pic03.jpg', alt='')
+              img(src='img/pic03.jpg', alt='')
             .content
               h3 Aliquam sed magna
               p
@@ -426,38 +425,38 @@ html
               .row.uniform
                 .12u
                   span.image.fit
-                    img(alt='', src='images/pic04.jpg')
+                    img(alt='', src='img/pic04.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic01.jpg')
+                    img(alt='', src='img/pic01.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic02.jpg')
+                    img(alt='', src='img/pic02.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic03.jpg')
+                    img(alt='', src='img/pic03.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic02.jpg')
+                    img(alt='', src='img/pic02.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic03.jpg')
+                    img(alt='', src='img/pic03.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic01.jpg')
+                    img(alt='', src='img/pic01.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic03.jpg')
+                    img(alt='', src='img/pic03.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic01.jpg')
+                    img(alt='', src='img/pic01.jpg')
                 .4u
                   span.image.fit
-                    img(alt='', src='images/pic02.jpg')
+                    img(alt='', src='img/pic02.jpg')
             h5 Left & Right
             p
               span.image.left
-                img(alt='', src='images/pic05.jpg')
+                img(alt='', src='img/pic05.jpg')
               | Fringilla nisl. Donec accumsan
               |                 interdum nisi, quis tincidunt felis sagittis eget. tempus
               |                 euismod. Vestibulum ante ipsum primis in faucibus vestibulum.
@@ -482,7 +481,7 @@ html
               |                 faucibus. Integer ac pellentesque praesent.
             p
               span.image.right
-                img(alt='', src='images/pic05.jpg')
+                img(alt='', src='img/pic05.jpg')
               | Fringilla nisl. Donec accumsan
               |                 interdum nisi, quis tincidunt felis sagittis eget. tempus
               |                 euismod. Vestibulum ante ipsum primis in faucibus vestibulum.
