--- a/views/index.jade
+++ b/views/index.jade
@@ -9,11 +9,14 @@ html
     link(rel='stylesheet', href='assets/css/main.css')
     link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
   body
-    #app {{ html|safe }}
     script(type='text/javascript').
       var config = !{config};
       var appId = #{isStaging} ? config.Facebook['#{branch}'].appId : config.Facebook.appId;
       var pageId = #{isStaging} ? config.Facebook['#{branch}'].pageId : config.Facebook.pageId;
+      window.config = config;
+      window.appId = appId;
+      window.pageId = pageId;
+    #app {{ html|safe }}
     script(src='/js/vendor.js')
     script(src='/js/vendor.bundle.js')
     script(src='/js/bundle.js')
