--- a/views/shared/layout.jade
+++ b/views/shared/layout.jade
@@ -8,8 +8,7 @@ html
     block header
   body
     block body
-    #app {{ html|safe }}
+    #app
     script(src='/js/vendor.js')
     script(src='/js/vendor.bundle.js')
     script(src='/js/bundle.js')
-    include footer
