converted nav's code to reactjs

--- a/views/login-success.jade
+++ b/views/login-success.jade
@@ -1,5 +1,7 @@
-html
-    body
-        h1 You have successfully logged in
-        form(name='logout', method='get', action='/login/logout')
-            input(type='submit', value='Logout')
+extends shared/layout
+
+//html
+//    body
+//        h1 You have successfully logged in
+//        form(name='logout', method='get', action='/login/logout')
+//            input(type='submit', value='Logout')
